# libfs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h.cmake  fs.c  fs.h  fs.h.cmake  fs.ts  gulpfile.js  jest.config.js  libfs.d.ts  libfs.js  libfs.wasm  package.json  tsconfig.json  version.h.in
.github/workflows/: CI.yml  CI_docs.yml
cmake/Modules/: ConfigureChecks.cmake  FindCMocka.cmake  MacroEnsureOutOfSourceBuild.cmake
docs/: CMakeLists.txt  Doxyfile.in  api.rst  changelog.rst  conf.py  examples.rst  fs_current_path.rst  fs_directory_iterator.rst  fs_hooks.rst  fs_is_symlink.rst  fs_read_dir.rst  fs_read_file.rst  fs_temp_dir.rst  fs_temp_directory_path.rst  index.rst  intro.rst  requirements.txt  roadmap.rst  test_api.rst
docs/api/: defines.rst  fs_copy.rst  fs_copy_file.rst  fs_current_dir.rst  fs_delete_dir.rst  fs_delete_file.rst  fs_exist.rst  fs_exists.rst  fs_init_hooks.rst  fs_make_dir.rst  fs_open_dir.rst  fs_write_file.rst  functions.rst  libfs_free.rst  libfs_malloc.rst  libfs_patch_version.rst  structures.rst
docs/api/defines/: libfs_free.rst  libfs_major_version.rst  libfs_malloc.rst  libfs_minor_version.rst  libfs_patch_version.rst
docs/api/functions/: fs_absolute.rst  fs_basename.rst  fs_close_dir.rst  fs_close_file.rst  fs_copy.rst  fs_copy_file.rst  fs_current_dir.rst  fs_delete_dir.rst  fs_delete_file.rst  fs_dirname.rst  fs_exist.rst  fs_file_size.rst  fs_init_hooks.rst  fs_is_directory.rst  fs_is_file.rst  fs_is_symlink.rst  fs_iter_file.rst  fs_join_path.rst  fs_make_dir.rst  fs_next_char.rst  fs_open_dir.rst  fs_read_dir.rst  fs_read_file.rst  fs_read_file_buffer.rst  fs_rsplit.rst  fs_temp_dir.rst  fs_write_file.rst
docs/api/structures/: fs_directory_iterator.rst  fs_file_iterator.rst  fs_hooks.rst
docs/test_api/: defines.rst  fs_assert_exist.rst  fs_assert_non_exist.rst  fs_assert_open_dir.rst  fs_assert_read_file.rst  fs_assert_write_file.rst  functions.rst
docs/test_api/defines/: libfs_max_path.rst
docs/test_api/functions/: fs_assert_current_dir.rst  fs_assert_delete_dir.rst  fs_assert_delete_file.rst  fs_assert_exist.rst  fs_assert_iter_file.rst  fs_assert_join_path.rst  fs_assert_make_dir.rst  fs_assert_non_exist.rst  fs_assert_open_dir.rst  fs_assert_read_dir.rst  fs_assert_read_file.rst  fs_assert_write_file.rst
tests/: CMakeLists.txt  fs_testutils.h  test_config.h  test_fs.c  test_fs.ts
